--- a/src/app/pages/reserva/reserva.component.html
+++ b/src/app/pages/reserva/reserva.component.html
@@ -1,7 +1,13 @@
 <mat-card>
+  <mat-card-header>
+    <mat-card-title>Reserva de habitaciones</mat-card-title>
 
-<ngx-fullcalendar defaultView="month" [events]="events" [options]="options">
+  </mat-card-header>
+  <mat-card-content>
+    <full-calendar [options]='calendarOptions'></full-calendar>
+  </mat-card-content>
 
-</ngx-fullcalendar>
+
+
 
 </mat-card>
