--- a/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
@@ -7,12 +7,12 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="yes()">
+  <button mat-stroked-button color="primary" (click)="yes()">
     <mat-icon>
       done
     </mat-icon>
     Yes</button>
-  <button mat-raised-button color="primary" (click)="no()">
+  <button mat-stroked-button color="primary" (click)="no()">
     <mat-icon>
       cancel
     </mat-icon>
