--- a/src/app/shared/components/login/login.component.css
+++ b/src/app/shared/components/login/login.component.css
@@ -15,7 +15,7 @@ mat-card-content,mat-card-footer,mat-card-actions {
   justify-content: center;
 }
 
-.mat-raised-button,.mat-button {
+.mat-stroked-button,.mat-button {
   width: 300px;
   margin: 0.5rem;
 }
