--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -30,7 +30,7 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary" [disabled]="form.invalid" (click)="submit()">
+    <button mat-stroked-button color="primary" [disabled]="form.invalid" (click)="submit()">
       Entrar
     </button>
   </mat-card-actions>
